# calculos-hematimetricos

./: .gitignore  README.md  classes.py  helpers.py  main.py  pages.py  pubspec.yaml  pyproject.toml  requirements.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/exemplo/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/pages/: home_page.dart
lib/pages/pageCalculations/: chcm_page.dart  hcm_page.dart  vcm_page.dart
lib/pages/pageViews/: one_page.dart
test/: widget_test.dart
web/: index.html  manifest.json
